[package]
name = "is-docker"
description = "Checks if the process is running inside a Docker container."
version = "0.2.0"
authors = ["Sean Larkin <TheLarkInn@users.noreply.github.com>"]
repository = "https://github.com/TheLarkInn/is-docker"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
once_cell = "1.17.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
